--- a/moviegram/package.json
+++ b/moviegram/package.json
@@ -14,6 +14,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-search-box": "^2.0.2",
     "react-uid": "^2.2.0"
   },
   "scripts": {
