--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
+    "nodemon": "^2.0.2",
     "path": "^0.12.7"
   }
 }
