--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
     "path": "^0.12.7"
