--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install --prefix server && npm install --prefix frontend-app"
+    "postinstall": "npm install --prefix backend && npm install --prefix frontend"
   },
   "repository": {
     "type": "git",
