--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "backend for moviegram",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+        "setup": "npm install && cd client && npm install && cd ..",
+        "build-run": "cd client && npm run build && cd .. && node server.js",
+        "start": "node server.js",
+        "heroku-postbuild": "cd client && npm install && npm run build",
+        "test": "echo \"Error: no test specified\" && exit 1",
+	"dev": "nodemon server.js"
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
