--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "backend for moviegram",
   "main": "server.js",
   "scripts": {
-        "setup": "npm install && cd client && npm install && cd ..",
-        "build-run": "cd client && npm run build && cd .. && node server.js",
+        "setup": "npm install && cd frontend && npm install && cd ..",
+        "build-run": "cd frontend && npm run build && cd .. && node server.js",
         "start": "node server.js",
-        "heroku-postbuild": "cd client && npm install && npm run build",
+        "heroku-postbuild": "cd frontend && npm install && npm run build",
         "test": "echo \"Error: no test specified\" && exit 1",
 	"dev": "nodemon server.js"
     },
